--- a/src/sass/_mixins.scss
+++ b/src/sass/_mixins.scss
@@ -22,13 +22,17 @@
 
 //--- Z-INDEX ---//
 $z-index: (
-  nav:     100,
+  nav:     2,
   overlay: 200,
   popup:   300
 );
 
 @function z-index($key) {
   @return map-get($z-index, $key);
+}
+
+@mixin z($key) {
+    z-index: z-index($key);
 }
 //---- PSEUDOELEMENTS -----//
 @mixin ps($display: block, $pos: absolute, $content: ''){
@@ -45,11 +49,10 @@ $z-index: (
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-
-// ---- LETTER SPACING ---- //
-@mixin ls ($spacing){
-  letter-spacing: $spacing;
-  margin-right: -$spacing;
- }
 }
 
+//---- TRANSITIONS -----//
+
+@mixin easeOut {
+    transition: all .5s ease-out;
+}
