--- a/src/sass/_reset.scss
+++ b/src/sass/_reset.scss
@@ -1,2 +1,15 @@
-*,::before,::after{padding: 0; margin:0; box-sizing: border-box;}
- ul,ol,li{list-style:none;} a{text-decoration:none;}
+*,
+::before,
+::after {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+ul,
+ol,
+li {
+  list-style: none;
+}
+a {
+  text-decoration: none;
+}
