--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -1,8 +1,9 @@
 // ------ COLORS ------ //
-$primary-c: #444;
+$primary-c: #262626;
 $h1-c: #fff;
 $sm-heading-bg: lighten(#444, 2);
 $links-c: #fff;
 $secondary-c: #ffc600;
 $show-home-img: true;
 $home-img: url('../../dist/assets/img/main_bg/main-large.png');
+$background-opacity: .9;
