--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -7,6 +7,7 @@ $secondary-c: #ffc600;
 $show-home-img: true;
 $home-img: url('../../dist/assets/img/main_bg/main-large.png');
 $background-opacity: .9;
+$portrait: url('../../dist/assets/img/portrait-onsite.png');
 
 // ------------------ SIZES --------------------- //
 // --- Menu button -- //
@@ -16,3 +17,5 @@ $btnMenuLineWidth: 28px;
 $btnMenuLineHeight: 3px;
 $btnMenuMargin: 0 0 5px 0;
 $btnMenu-bg: #fff;
+$navLinkSize: 2.5rem;
+
