--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -32,3 +32,89 @@
     }
   }
 }
+
+// ---- MENU OVERLAY ---- //
+
+.menu{
+  @include menuOverlay;
+
+  &.show{
+    visibility: visible;
+  }
+ 
+  &-branding,
+  &-nav{
+   display:flex;
+   flex-flow: column wrap;
+   align-items: center;
+   justify-content: center;
+   float: left;
+   width: 50%;
+   height: 100vh;
+   overflow: hidden; 
+  }
+  &-nav{
+     margin: 0;
+     padding: 0;
+     background: darken($primary-c, 5);
+     transform: translate3d(0, -100%, 0);
+     @include easeOut;
+
+     &.show{
+      //  sliding from top to bottom
+     transform: translate3d(0,0,0);
+     }
+  }
+
+  // Branding side
+  &-branding{
+    background: $primary-c;
+    transform: translate3d(0, 100%, 0);
+    @include easeOut;
+   
+    &.show{
+      //  sliding from bottom to top
+     transform: translate3d(0,0,0);
+     }
+
+     .portrait{
+       @include portrait;
+       background: $portrait;
+       opacity: 1;
+       @include z(nav);
+     }
+  }
+  .nav-item{
+    transform: translate3d(600px, 0, 0);
+    @include easeOut;
+
+    &.show{
+     //  sliding from right
+    transform: translate3d(0,0,0);
+    }
+
+    &.current > a {
+       color: $secondary-c;
+    }
+  }
+
+  .nav-link{
+    position: relative;
+    display: inline-block;
+    font-size: $navLinkSize;
+  
+    &:hover{
+      color: $secondary-c;
+      @include easeOut;
+    }
+  }
+}
+
+//  Deylay items slide
+
+@for $i from 1 through 4 {
+  .nav-item:nth-child(#{$i}){
+    transition-delay:  $i * 0.1s;
+  }
+}
+
