--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -6,6 +6,8 @@ $links-c: #fff;
 $secondary-c: #ffc600;
 $show-home-img: true;
 $home-img: url('../../dist/assets/img/main_bg/main-large.png');
+$home-img-md: url('../../dist/assets/img/main_bg/main-m.png');
+$home-img-sm: url('../../dist/assets/img/main_bg/main-sm.png');
 $background-opacity: .9;
 $portrait: url('../../dist/assets/img/portrait-onsite.png');
 
