--- a/src/sass/_mobile.scss
+++ b/src/sass/_mobile.scss
@@ -49,6 +49,10 @@
     background-repeat: no-repeat;
     background-position: -50% 0;
   }
+
+  .sm-heading{
+    min-width: 45%;
+  }
 }
 
 // ---- SMARTPHONES --- //
