--- a/src/sass/_nav.scss
+++ b/src/sass/_nav.scss
@@ -102,7 +102,7 @@
     position: relative;
     display: inline-block;
     font-size: $navLinkSize;
-  
+    color: set-text-color($primary-c);
     &:hover{
       color: $secondary-c;
       @include easeOut;
