--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -11,9 +11,10 @@
 body {
   @include background;
   background: $primary-c;
-  color: $h1-c;
+  color: set-text-color($primary-c);
   height: 100%;
   font-family:'Raleway', Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: 200;
   line-height: 1.5;
 }
 
@@ -34,8 +35,10 @@ main{
   }
   &#home{
     overflow: hidden;
+    margin-left: 20%;
     h1{
       margin-top: 20vh;
+      font-weight: 300;
     }
   }
 }
