--- a/src/sass/About/_main-about.scss
+++ b/src/sass/About/_main-about.scss
@@ -20,8 +20,10 @@
 
   .job{
     background: lighten($primary-c,  4);
-    border-bottom: 2px solid $secondary-c;
-    padding: .5rem;
+    border-bottom: 4px solid $secondary-c;
+    padding: 1rem;
+    box-shadow: 0 0 40px rgba(0,0,0,.5);
+    border-radius: 5px;
   }
 
   .job-1{
@@ -34,6 +36,23 @@
 
   .job-3{
     grid-area:  job3;
+  }
+
+  h3{
+    text-align: center;
+    font-size: 2rem;
+    margin-bottom: 20px;
+  }
+
+  h6{
+    text-align: center;
+    font-size: 1rem;
+    margin-bottom: 20px;
+    color: $secondary-c;
+  }
+
+  p{
+    text-align: justify;
   }
 }
 
