contact page beginning

--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -7,8 +7,8 @@ $secondary-c: #ffc600;
 // --- work --- //
 $btnDark-c: #fff;
 $btnLight-c: #333;
-
-
+// --- contact --- //
+$btnSend-bg: transparent;
 // -------------- BACKGROUND IMAGES -------------- //
 // --- HOME ---//
 $show-home-img: true;
@@ -21,8 +21,8 @@ $work-img: url('../../dist/assets/img/work_bg/work-bg.png');
 $portrait: url('../../dist/assets/img/portrait-onsite.png');
 // --- ABOUT --- //
 $about-img: url('../../dist/assets/img/rest_bg/rest-medium.png');
-
-
+// --- CONTACT --- //
+$contact-img: url('../../dist/assets/img/cntact_bg/contact-large.png');
 // ------------------ SIZES --------------------- //
 // --- Menu button -- //
 $menuBtnRight: 35px;
