--- a/src/sass/About/_main-about.scss
+++ b/src/sass/About/_main-about.scss
@@ -27,10 +27,10 @@
   }
 
   .job{
-    background: lighten($primary-c,  4);
+    background: darken($primary-c,  2);
     border-bottom: 4px solid $secondary-c;
     padding: 1rem;
-    box-shadow: 0 0 40px rgba(0,0,0,.5);
+    box-shadow: 0 0 60px 8px rgba(0,0,0,.5);
     border-radius: 5px;
   }
 
@@ -61,6 +61,7 @@
 
   p{
     text-align: justify;
+    color: $paragraph-c;
   }
 }
 
