--- a/src/sass/Contact/_contact.scss
+++ b/src/sass/Contact/_contact.scss
@@ -6,6 +6,18 @@
   background-attachment: fixed;
 }
 
+#contact-bg-img::after{
+  content:'';
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba($primary-c,$background-opacity);
+  @include z(overlay);
+}
+
+
 .contact-wrapper{
   display:flex;
   flex-flow: column wrap;
@@ -17,11 +29,82 @@
 
   .contact-box{
     width: 50%;
-    height: 100vh;    
+    height: 100vh;
+    text-align: center;
+    line-height: 30px;
+
+    h1.lg-heading{
+      margin-top: 5vh;
+      line-height: 1.5;
+    }
+
+    h2.sm-heading{
+      margin-left: 8rem;
+      padding: 0.2rem 1rem;
+    }
+  }
+
+
+  .rodo{
+    margin: 30px auto;
+    width: 75%;
+    height: 50vh;
+    background: $rodo-bg;
+    padding: 20px;
+    overflow: auto;
+    p{
+      color: $rodo-paragraph;
+      text-align: justify;
+    } 
+  }
+
+  #send-message{
+    background: transparent;
+    padding: 10px;
+    color: $secondary-c;
+    font-size: 1rem;
+    border: 2px solid $secondary-c;
+    cursor: pointer;
+    outline: none;
+    &:hover{
+      transform: scale(.98);
+      
+    }
   }
 
   .contact-box-2{
     background: #000;
+    -webkit-box-shadow: -30px 0px 39px 13px rgba(0,0,0,0.75);
+    -moz-box-shadow: -30px 0px 39px 13px rgba(0,0,0,0.75);
+    box-shadow: -30px 0px 39px 13px rgba(0,0,0,0.75);
+
+    h6{
+      color: $secondary-c;
+      font-size: 1rem;
+    }
   }
 }
 
+
+#map{
+  width: 100%;
+  height: 70vh;
+}
+
+#address{
+  span{
+    float: left;
+    margin: 0 80px;
+    padding: 0;
+    font-size: 1.2rem;
+    color: $secondary-c;
+  }
+}
+
+footer{
+  width: 100%;
+  height: 40px;
+  background: #000;
+  text-align: center;
+  line-height: 40px;
+}
