--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -26,6 +26,19 @@ $about-img: url('../../dist/assets/img/rest_bg/rest-medium.png');
 $contact-img: url('../../dist/assets/img/cntact_bg/contact-large.png');
 $rodo-bg: rgba(0, 0, 0, 0.76);
 $rodo-paragraph: rgb(155, 155, 155);
+//  --- card ---- //
+$body-bg: #151825;
+$font-c: #ddd;
+$secondary-c: #ffc600;
+$fz: 1.2em;
+$h1-c:#ffc600;
+$inputBackground:transparent;
+$inputBorder-c: #fff;
+$contact-card-shd: 0 0 100px 15px rgba (0,0,0,.5);
+//  --- BACKGROUNDS --- //
+$card-bg: transparent;
+$thx-card-bg: #000;
+$front-bg: #0c1024;
 // ------------------ SIZES --------------------- //
 // --- Menu button -- //
 $menuBtnRight: 35px;
