added british icon and span 'MENU' to navbar

--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -20,6 +20,13 @@ a{
   color: $links-c;
 }
 
+
+.menu-word{
+  margin: 30px 80px;
+  float: right;
+  font-size: 1.3rem;
+}
+
 .header{
   position: fixed;
   @include z(nav);
