added audio streen to Home page and broke message card styling

--- a/src/sass/_vars.scss
+++ b/src/sass/_vars.scss
@@ -2,9 +2,10 @@
 $primary-c: #161616;
 $h1-c: #fff;
 $sm-heading-bg: lighten(#444, 2);
-$paragraph-c: rgb(116, 116, 116);
+$paragraph-c: rgb(160, 160, 160);
 $links-c: #fff;
 $secondary-c: #ffc600;
+$socials-c: rgba(138, 138, 138, 0.5);
 // --- work --- //
 $btnDark-c: #fff;
 $btnLight-c: #333;
@@ -26,6 +27,7 @@ $about-img: url('../../dist/assets/img/rest_bg/rest-medium.png');
 $contact-img: url('../../dist/assets/img/cntact_bg/contact-large.png');
 $rodo-bg: rgba(0, 0, 0, 0.76);
 $rodo-paragraph: rgb(155, 155, 155);
+
 //  --- card ---- //
 $body-bg: #151825;
 $font-c: #ddd;
