--- a/src/sass/Contact/_contact.scss
+++ b/src/sass/Contact/_contact.scss
@@ -104,6 +104,11 @@
     font-size: 1.2rem;
     color: $secondary-c;
   }
+
+  .fas, .far{
+    font-size: 1.5rem;
+    color: $secondary-c;
+  }
 }
 
 footer{
