--- a/src/sass/Contact/_contact-card.scss
+++ b/src/sass/Contact/_contact-card.scss
@@ -6,189 +6,219 @@
  //  ------------- FILE IMPORTS ------------ //
 
  .card{
-   position: absolute;
-   top: -50%;
-   left: 50%;
-   transform: translate(-50%, -50%);
-   width: 800px;
-   background: $card-bg;
-   transition: .5s;
+  position: absolute;
+  top: -50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 800px;
+  background: $card-bg;
+  transition: .5s;
 
-   &:hover .card__content{
-     transition: transform 1.5s ease-out;
-     transform: rotateY(-.5turn);
-   }
-
-  .card__content{
-    text-align: center;
-    position: relative;
-    padding: 13em;
-    transform-style: preserve-3d;
-    transition: 1.5s ease;
-  }
-
-  .card__front,
-  .card__back{
-    position: absolute;
-    top:0;
-    bottom:0;
-    left: 0;
-    right:0;
-    padding: 2em;
-    border-radius: 20px;
-    backface-visibility: hidden;
-    transform-style: preserve-3d;
-    // box-shadow: 0 0 50px 5px rgba(0,0,0,.5);
-    box-shadow: $contact-card-shd;
-  }
-
-  .card__front{
-    background-image: url('../../../dist/assets/img/cntact_bg/contact-card-bg/bricks-1.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 0 0;
-  }
-
-  .card__back{
+  &:hover .card__content{
+    transition: transform 1.5s ease-out;
     transform: rotateY(-.5turn);
-    background-image: url('../../../dist/assets/img/cntact_bg/contact-card-bg/bricks-1.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: 0 0;
   }
 
-  .card__title{
-    transform: translateZ(100px);
-  }
+ .card__content{
+   text-align: center;
+   position: relative;
+   padding: 13em;
+   transform-style: preserve-3d;
+   transition: 1.5s ease;
+ }
 
-  .card__subtitle{
-    padding: 40px;
-    transform: translateZ(100px);
-    text-align: center;
-    font-weight: 100;
-    letter-spacing: 2px;
-  }
-
-  .lastname__span{
-    color: $h1-c;
-  }
-
-  hr{
+ .card__front,
+ .card__back{
    position: absolute;
-   top: 17%;
-   left: 50%;
-   display: block;
-   transform: translate(-50%, -50%) translateZ(100px);
-   width: 8%;
-   height: 2px;
-   border:0;
-   border-top: 1px solid $secondary-c;
-  }
+   top:0;
+   bottom:0;
+   left: 0;
+   right:0;
+   padding: 2em;
+   border-radius: 20px;
+   backface-visibility: hidden;
+   transform-style: preserve-3d;
+   box-shadow: 0 0 50px 5px rgba(0,0,0,.5);
+ }
+
+ .card__front{
+   background-image: url('../../assets/img/bricks-1.jpg');
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: 0 0;
+ }
+
+ .card__back{
+   transform: rotateY(-.5turn);
+   background-image: url('../../assets/img/bricks-1.jpg');
+   background-size: cover;
+   background-repeat: no-repeat;
+   background-position: 0 0;
+ }
+
+ .card__title{
+   transform: translateZ(100px);
+ }
+
+ .card__subtitle{
+   padding: 40px;
+   transform: translateZ(100px);
+   text-align: center;
+   font-weight: 100;
+   letter-spacing: 2px;
+ }
+
+ .lastname__span{
+   color: $h1-c;
+ }
+
+ hr{
+  position: absolute;
+  top: 17%;
+  left: 50%;
+  display: block;
+  transform: translate(-50%, -50%) translateZ(100px);
+  width: 8%;
+  height: 2px;
+  border:0;
+  border-top: 1px solid $secondary-c;
+ }
 
 // ----- FORM & INPUTS & TEXTAREA STYLING -----  //
 
-  form{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    transform-style: preserve-3d;
-    width: 70%;
-  }
+ form{
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   transform-style: preserve-3d;
+   width: 70%;
+ }
 
-  input{
-    background: $inputBackground;
-    width:100%;
-    border-bottom: 1px solid  $inputBorder-c;
-    border-top-color: transparent;
-    border-left-color: transparent;
-    border-right-color: transparent;
-    margin: 10px 0 10px 0;
-    padding: 5px;
-    transform: translateZ(100px);
-    color: $font-c;
-    outline: none;
+ input{
+   background: $inputBackground;
+   width:100%;
+   border-bottom: 1px solid  $inputBorder-c;
+   border-top-color: transparent;
+   border-left-color: transparent;
+   border-right-color: transparent;
+   margin: 10px 0 10px 0;
+   padding: 5px;
+   transform: translateZ(100px);
+   color: $font-c;
+   outline: none;
 
-    &:focus{
-      border: 1px solid $secondary-c;
-      color: $secondary-c;
-    }
-  }
-
-  label{
-    display: block;
-    float: left;
-    padding: 0;
-    margin: 10px 0;
-    transform: translateZ(100px);
+   &:focus{
+     border: 1px solid $secondary-c;
+     color: $secondary-c;
    }
+ }
 
-   .req{
-    float: left;
-    color:red;
-    transform: translateZ(100px);
+ label{
+   display: block;
+   float: left;
+   padding: 0;
+   margin: 10px 0;
+   transform: translateZ(100px);
   }
 
-  textarea{
-    background: $inputBackground;
-    max-width: 100%;
-    min-width: 100%;
-    max-height: 60px;
-    margin: 10px 0 10px 0;
-    padding: 10px;
-    transform: translateZ(100px);
-    color: $font-c;
-    outline: none;
+  .req{
+   float: left;
+   color:red;
+   transform: translateZ(100px);
+ }
 
-    &:focus{
-      border: 1px solid $secondary-c;
-      color: $secondary-c;
-    }
-  }
+ textarea{
+   background: $inputBackground;
+   max-width: 100%;
+   min-width: 100%;
+   max-height: 60px;
+   margin: 10px 0 10px 0;
+   padding: 10px;
+   transform: translateZ(100px);
+   color: $font-c;
+   outline: none;
 
-  #send__message{
-    background: $inputBackground;
-    color: $secondary-c;
-    padding: 2px 10px;
-    cursor: pointer;
-    outline: none;
-    transform: translateZ(100px);
+   &:focus{
+     border: 1px solid $secondary-c;
+     color: $secondary-c;
+   }
+ }
 
-    &:hover{
-     border: 2px solid $secondary-c;
-    }
-  }
+ #send__message{
+   background: $inputBackground;
+   color: $secondary-c;
+   padding: 2px 10px;
+   cursor: pointer;
+   outline: none;
+   transform: translateZ(100px);
+
+   &:hover{
+    border: 2px solid $secondary-c;
+   }
+ }
 
 }
 
+#trigger{
+   position: absolute;
+   bottom: 10%;
+   left: 50%;
+   transform: translate(-50%,-50%);
+   padding: 10px;
+   background: transparent;
+   color:#ddd;
+   text-transform: uppercase;
+   border-radius: 28px;
+   border: 2px solid #ddd;
+   cursor: pointer;
+   outline:none;
+   transition: .3s;
 
-
+   &:hover{
+     color: $secondary-c;
+     border-color: $secondary-c;
+   }
+}
 
 // ------- THANK YOU MESSAGE -------- //
 
 .thank__you__card{
-  position: absolute;
-  top: 150%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 500px;
-  height: 200px;
-  background: $thx-card-bg;
-  box-shadow: 0 0 50px 5px rgba(0,0,0,.5);
-  border-radius: 10px;
-  transition: .5s;
+ position: absolute;
+ bottom: -80%;
+ left: 50%;
+ transform: translate(-50%, -50%);
+ width: 500px;
+ height: 200px;
+ background: $card-bg;
+ box-shadow: 0 0 50px 5px rgba(0,0,0,.5);
+ border-radius: 10px;
+ transition: .5s;
 
-  .thx__header{
-    text-align: center;
-    margin: 30px 0 30px;
-    color: $secondary-c;
-  }
+ .thx__header{
+   text-align: center;
+   margin: 30px 0 30px;
+   color: $secondary-c;
+ }
 
-  #thx_para{
-    text-align: center;
-  }
+ #thx{
+   text-align: center;
+ }
 }
 
+
+// ------- JAVASCRIPT CLASSES ------- //
+.show{
+ top: 50%;
+}
+
+.showThx{
+ bottom: 30%;
+}
+
+.thanksUp{
+ bottom: 200%;
+}
 
 // ------- JAVASCRIPT CLASSES ------- //
 .show-card{
