--- a/src/sass/Contact/_contact.scss
+++ b/src/sass/Contact/_contact.scss
@@ -111,9 +111,9 @@
   }
 }
 
-footer{
-  width: 100%;
-  height: 40px;
+#copy_right{
+  display: block;
+  transform: rotate(90deg);
   background: #000;
   text-align: center;
   line-height: 40px;
